--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: My website
 description: A virtual proof that I'm awesome
 
 # Your name to show in the footer
-author: Some Person
+author: Charis Chanialidis
 
 # --- List of links in the navigation bar --- #
 
@@ -39,12 +39,13 @@ round-avatar: true
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
   email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+#  facebook: deanattali
+  linkedin: cchanialidis
+  github: cchanialidis
+  twitter: cchanialidis
   rss: true
 #  reddit: yourname
-#  linkedin: daattali
+  
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
