--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-#avatar: "/assets/img/avatar-icon.png"
+avatar: "/assets/img/apollo_pic_charis.jpg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -30,7 +30,7 @@ round-avatar: true
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
 #avatar: "/assets/img/avatar-icon.png"
-title-img: "/assets/img/apollo_pic_charis.jpg"
+#title-img: "/assets/img/apollo_pic_charis.jpg"
 
 
 # --- Footer options --- #
