--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ social-network-links:
   linkedin: cchanialidis
   github: cchanialidis
   twitter: cchanialidis
-  rss: true
+ # rss: true
 #  reddit: yourname
   
 #  xing: yourname
