--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ author: Charis Chanialidis
 
 navbar-links:
   About Me: "aboutme"
+  Publications: "papers"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
