--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,10 @@ author: Charis Chanialidis
 navbar-links:
   About Me: "aboutme"
   Publications: "papers"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
+  Blogs: "blogs"
+  #Resources:
+  #  - Beautiful Jekyll: "https://beautifuljekyll.com"
+  #  - Learn markdown: "https://www.markdowntutorial.com/"
   #Author's home: "https://deanattali.com"
 
 # --- Logo --- #
