--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: My website
 
 # Next parameter used to move the blog from the home page
-paginate_path: "/blog/page:num/"
+#paginate_path: "/blog/page:num/"
 
 # Short description of your site
 #description: A virtual proof that I'm awesome
