--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: @cchanialidis
 
 # Next parameter used to move the blog from the home page
 #paginate_path: "/blog/page:num/"
