--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # --- Basic options --- #
 
 # Name of website
-title: @cchanialidis
+title: "@cchanialidis"
+description: "Data Scientist"
 
 # Next parameter used to move the blog from the home page
 #paginate_path: "/blog/page:num/"
