--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author: Charis Chanialidis
 navbar-links:
   About Me: "aboutme"
   Publications: "papers"
-  Blogs: "blogs"
+  #Blogs: "blogs"
   #Resources:
   #  - Beautiful Jekyll: "https://beautifuljekyll.com"
   #  - Learn markdown: "https://www.markdowntutorial.com/"
